<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/shop"
        android:enabled="true"
        android:icon="@drawable/shop_icon"
        android:checked="true"
        android:color="@color/black"
        android:title="@string/shop" />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/search_icon"
        android:color="@color/black"
        android:title="@string/search" />
    <item
        android:id="@+id/closet"
        android:enabled="true"
        android:icon="@drawable/closet_icon"
        android:color="@color/black"
        android:title="@string/closet" />
    <item
        android:id="@+id/bag"
        android:enabled="true"
        android:icon="@drawable/bag_icon"
        android:color="@color/black"
        android:title="@string/bag" />
</menu>