<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isRefreshing"
            type="Boolean" />

        <variable
            name="listener"
            type="com.clothing.shoppingcarts.utils.RefreshDataListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_6sdp"
                android:layout_margin="@dimen/_12sdp"
                android:src="@drawable/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:fontFamily="@font/sanspro_regular"
                android:text="@string/checkout"
                android:textColor="@color/black"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_back"
                app:layout_constraintStart_toEndOf="@+id/iv_back"
                app:layout_constraintTop_toTopOf="@+id/iv_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/rv_items"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/epoxy_layout_cart_items"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_layer"
            app:layout_constraintTop_toBottomOf="@+id/clToolBar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/price_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/sanspro_bold"
                    android:layout_marginStart="@dimen/_5sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$38.88"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/sanspro_bold"
                    android:layout_marginStart="@dimen/_5sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/rect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rectangle"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_layout" />

            <TextView
                android:id="@+id/tax_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_shipping_info"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/sanspro_regular"
                android:layout_marginStart="@dimen/_15sdp"
                app:layout_constraintStart_toEndOf="@+id/rect"
                app:layout_constraintBottom_toBottomOf="@+id/rect"
                app:layout_constraintTop_toTopOf="@+id/rect"/>

            <TextView
                android:id="@+id/shipping_btn"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_counter"
                android:fontFamily="@font/sanspro_regular"
                android:text="@string/edit_shipping"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="@+id/tax_tv"
                app:layout_constraintTop_toBottomOf="@id/rect"
                app:drawableStartCompat="@drawable/shipping_icon" />

            <ImageView
                android:id="@+id/rectTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rectangle"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shipping_btn" />

            <TextView
                android:id="@+id/tv_edit_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_card_info"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/sanspro_regular"
                android:layout_marginStart="@dimen/_15sdp"
                app:layout_constraintStart_toEndOf="@+id/rectTwo"
                app:layout_constraintBottom_toBottomOf="@+id/rectTwo"
                app:layout_constraintTop_toTopOf="@+id/rectTwo"/>

            <TextView
                android:id="@+id/editCard_btn"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_counter"
                android:fontFamily="@font/sanspro_regular"
                android:text="@string/edit_cards"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="@+id/tv_edit_card"
                app:layout_constraintTop_toBottomOf="@id/rectTwo"
                app:drawableStartCompat="@drawable/debt_card" />

            <TextView
                android:id="@+id/buy_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_try_me"
                android:fontFamily="@font/sanspro_semibold"
                android:text="@string/place_order"
                android:gravity="center"
                android:backgroundTint="@color/blakish"
                android:includeFontPadding="false"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editCard_btn"
                app:drawableStartCompat="@drawable/card_icon" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buy_btn">

            </View>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>