<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="index"
            type="Integer" />

        <variable
            name="listener"
            type="com.clothing.shoppingcarts.ui.shop.item.ItemListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/white"
        android:layout_marginHorizontal="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/no_item"
            android:fontFamily="@font/sanspro_regular"
            android:textColor="@color/blakish"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/no_price"
            android:fontFamily="@font/sanspro_regular"
            android:textColor="@color/blakish"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

        <LinearLayout
            android:id="@+id/grand_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:includeFontPadding="false"
                android:fontFamily="@font/sanspro_bold"
                android:textColor="@color/blakish"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="$0"
                android:includeFontPadding="false"
                android:fontFamily="@font/sanspro_bold"
                android:textColor="@color/blakish"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grand_total" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>